--- a/views/Signup.html
+++ b/views/Signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Screen Frontend</title>
+    <link rel="stylesheet" href="../public/css/user.css">
 </head>
 <body>
     <h1>New User..!</h1>
