--- a/views/Signup.html
+++ b/views/Signup.html
@@ -24,7 +24,7 @@
 
         <input type="submit" type="button" value="Signup" id="submit-btn"><br>
 
-        <!-- <p>Existing User - <a href="../views/login.html">Login</a><br></p> -->
+        <p>Existing User - <a href="../views/login.html">Login</a><br></p>
     </form>
 </div>
 
