--- a/views/chat.html
+++ b/views/chat.html
@@ -14,6 +14,8 @@
       <div class="container">
         <div class="box1">
           <input type="text" id="massage" name="text" required />
+          <label for="File"></label>
+          <input type="file" id="File">
           <button type="submit">send</button>
         </div>
       </div>
